Add anchors to nav

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </figure>
 
         <nav id="nav-menu">
-            <div class="nav-item">LINK1</div>
-            <div class="nav-item">LINK2</div>
-            <div class="nav-item">LINK3</div>
+            <div class="nav-item"><a href="#">LINK1</a></div>
+            <div class="nav-item"><a href="#">LINK2</a></div>
+            <div class="nav-item"><a href="#">LINK3</a></div>
         </nav>
 
     </header>
