--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         </figure>
 
         <nav id="nav-menu">
-            <div class="nav-item"><a href="#">LINK1</a></div>
-            <div class="nav-item"><a href="#">LINK2</a></div>
-            <div class="nav-item"><a href="#">LINK3</a></div>
+            <div class="nav-item"><a href="#">HOME</a></div>
+            <div class="nav-item"><a href="#">PRODUCTS</a></div>
+            <div class="nav-item"><a href="#">CONTACT</a></div>
+            <div class="nav-item"><a href="#">ABOUT US</a></div>
         </nav>
 
     </header>
