Refactor nav menu from div to menu

--- a/index.html
+++ b/index.html
@@ -31,18 +31,38 @@
         </figure>
 
         <nav id="nav-menu">
-            <div class="nav-item"><a href="#">HOME</a></div>
-            <div class="nav-item"><a href="#">PRODUCTS</a></div>
-            <div class="nav-item"><a href="#">CONTACT</a></div>
-            <div class="nav-item"><a href="#">ABOUT US</a></div>
+            <ul>
+                <li class="nav-item"><a href="/">HOME</a></li>
+                <li class="nav-item"><a href="#products">PRODUCTS</a></li>
+                <li class="nav-item"><a href="#contact">CONTACT</a></li>
+                <li class="nav-item"><a href="#about">ABOUT US</a></li>
+            </ul>
         </nav>
 
     </header>
+
+    <main>
+
+        <article class="hidden" id="products">
+            <h1>Products content</h1>
+        </article>
+
+        <article class="hidden" id="contact">
+            <h1>Contact form</h1>
+        </article>
+
+        <article class="hidden" id="about">
+            <h1>About us</h1>
+        </article>
+
+    </main>
 
     <footer>
         <p>© 2022</p>
     </footer>
 
+    <script type="text/javascript" src="js/landing.js"></script>
+    
 </body>
 
 </html>
