--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         </figure>
 
         <nav id="nav-menu">
-            <ul>
+            <menu>
                 <li class="nav-item"><a href="/">HOME</a></li>
                 <li class="nav-item"><a href="#products">PRODUCTS</a></li>
                 <li class="nav-item"><a href="#contact">CONTACT</a></li>
                 <li class="nav-item"><a href="#about">ABOUT US</a></li>
-            </ul>
+            </menu>
         </nav>
 
     </header>
