Add id to nav menu anchors and change main article's ids

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <nav id="nav-menu">
             <menu>
                 <li class="nav-item"><a href="/">HOME</a></li>
-                <li class="nav-item"><a href="#products">PRODUCTS</a></li>
-                <li class="nav-item"><a href="#contact">CONTACT</a></li>
-                <li class="nav-item"><a href="#about">ABOUT US</a></li>
+                <li class="nav-item"><a id="products" href="#products-article">PRODUCTS</a></li>
+                <li class="nav-item"><a id="contact" href="#contact-article">CONTACT</a></li>
+                <li class="nav-item"><a id="about" href="#about-article">ABOUT US</a></li>
             </menu>
         </nav>
 
@@ -43,15 +43,15 @@
 
     <main>
 
-        <article class="hidden" id="products">
+        <article class="hidden" id="products-article">
             <h1>Products content</h1>
         </article>
 
-        <article class="hidden" id="contact">
+        <article class="hidden" id="contact-article">
             <h1>Contact form</h1>
         </article>
 
-        <article class="hidden" id="about">
+        <article class="hidden" id="about-article">
             <h1>About us</h1>
         </article>
 
