--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <nav id="nav-menu">
             <menu>
-                <li class="nav-item"><a href="/">HOME</a></li>
+                <li class="nav-item"><a href="/lucky-shrub/">HOME</a></li>
                 <li class="nav-item"><a id="products" href="#products-article">PRODUCTS</a></li>
                 <li class="nav-item"><a id="contact" href="#contact-article">CONTACT</a></li>
                 <li class="nav-item"><a id="about" href="#about-article">ABOUT US</a></li>
