Add id and change home button href

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </figure>
 
         <nav id="nav-menu">
-            <menu>
-                <li class="nav-item"><a href="/lucky-shrub/">HOME</a></li>
+            <menu id="menu">
+                <li class="nav-item"><a id="home" href="#">HOME</a></li>
                 <li class="nav-item"><a id="products" href="#products-article">PRODUCTS</a></li>
                 <li class="nav-item"><a id="contact" href="#contact-article">CONTACT</a></li>
                 <li class="nav-item"><a id="about" href="#about-article">ABOUT US</a></li>
