--- a/index.html
+++ b/index.html
@@ -43,17 +43,11 @@
 
     <main>
 
-        <article class="hidden" id="products-article">
-            <h1>Products content</h1>
-        </article>
-
-        <article class="hidden" id="contact-article">
-            <h1>Contact form</h1>
-        </article>
-
-        <article class="hidden" id="about-article">
-            <h1>About us</h1>
-        </article>
+        <div id="wrapper">
+            <article id="products-article"></article>
+            <article id="contact-article"></article>
+            <article id="about-article"></article>
+        </div>
 
     </main>
 
