Add placeholder content

--- a/index.html
+++ b/index.html
@@ -44,9 +44,17 @@
     <main>
 
         <div id="wrapper">
-            <article id="products-article"></article>
-            <article id="contact-article"></article>
-            <article id="about-article"></article>
+            <article id="products-article">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut magna lectus, suscipit quis dolor vel, facilisis luctus tortor. Donec at nulla lacus. Donec luctus nisi tempor, ultrices libero eu, tempor lacus. Sed purus felis, auctor id mi vitae, accumsan lobortis ex. Phasellus quis dapibus augue. Pellentesque et risus orci. Ut tempor, augue sed tempor rhoncus, quam ipsum porta augue, a convallis sapien ex sed justo. Nulla blandit pretium dui. In mattis blandit purus, non sodales quam mattis at. Phasellus quis sollicitudin tellus.</p>
+            </article>
+
+            <article id="contact-article">
+                <p>Aenean accumsan lobortis lacus vitae suscipit. Pellentesque sit amet mauris a ipsum lobortis condimentum. Nam porttitor purus justo, in porta eros iaculis vitae. Ut quis luctus dolor, eget tincidunt dolor. Nam fringilla, sapien vel dignissim tempus, diam sapien viverra erat, cursus condimentum mi magna in elit. Cras fermentum, elit sit amet luctus condimentum, lacus elit pulvinar mi, ut efficitur leo neque vitae neque. Integer lacinia lectus quis nisl sodales cursus. Mauris ornare dapibus porta. Suspendisse orci augue, interdum a nisl vitae, pharetra mollis quam. Duis pretium tempus fermentum. Proin suscipit dolor nibh, porttitor lacinia neque lobortis in. Fusce lacinia erat magna, vitae tristique dui molestie sed. Morbi sit amet ultricies dolor. Quisque volutpat laoreet mi ut finibus.</p>
+            </article>
+
+            <article id="about-article">
+                <p>Suspendisse sit amet lacinia odio. Aliquam ultricies magna nec lacus maximus, non gravida mi mattis. Quisque tempor non orci nec iaculis. Duis nec dolor ante. Pellentesque vestibulum ex vitae sem consectetur tincidunt. Aenean hendrerit auctor risus sed molestie. Sed velit arcu, facilisis ac congue sed, mattis eu felis. Duis in augue libero. Phasellus fringilla nisl sed auctor condimentum. Sed condimentum vestibulum metus, non eleifend sapien egestas ut. In sollicitudin risus at tincidunt lacinia.</p>
+            </article>
         </div>
 
     </main>
