--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <article class="page-article" id="products-article">
                 <article id="promotion"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut magna lectus, suscipit quis dolor vel, facilisis luctus tortor. Donec at nulla lacus. Donec luctus nisi tempor, ultrices libero eu, tempor lacus. Sed purus felis, auctor id mi vitae, accumsan lobortis ex. Phasellus quis dapibus augue. Pellentesque et risus orci. Ut tempor, augue sed tempor rhoncus, quam ipsum porta augue, a convallis sapien ex sed justo. Nulla blandit pretium dui. In mattis blandit purus, non sodales quam mattis at. Phasellus quis sollicitudin tellus.</p></article>
                 <article id="portfolio">
-                    <div class="project"></div>
-                    <div class="project"></div>
-                    <div class="project"></div>
+                    <div class="project">Text</div>
+                    <div class="project">Text</div>
+                    <div class="project">Text</div>
                 </article>
             </article>
 
