--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;700&display=swap" rel="stylesheet"> <!-- font-family: 'Dosis'; font-weight: 300/700; -->
 
+    <!-- JS -->
+    <script defer type="text/javascript" src="js/landing.js"></script>
+
 </head>
 
 <body>
@@ -67,8 +70,6 @@
     <footer>
         <p>© 2022</p>
     </footer>
-
-    <script type="text/javascript" src="js/landing.js"></script>
     
 </body>
 
