--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <nav id="nav-menu">
             <menu id="menu">
-                <li class="nav-item"><a id="home" href="#">HOME</a></li>
+                <li class="nav-item"><a id="home" href="#products-article">HOME</a></li>
                 <li class="nav-item"><a id="products" href="#products-article">PRODUCTS</a></li>
                 <li class="nav-item"><a id="contact" href="#contact-article">CONTACT</a></li>
                 <li class="nav-item"><a id="about" href="#about-article">ABOUT US</a></li>
@@ -47,7 +47,7 @@
     <main>
 
         <div id="wrapper">
-            <article class="page-article products-article">
+            <article class="page-article" id="products-article">
                 
                 <article id="promotion">
                     <img src="assets/offer.png" alt="Limited offer alert">
@@ -78,11 +78,11 @@
 
             </article>
 
-            <article class="page-article contact-article">
+            <article class="page-article" id="contact-article">
                 <p>Aenean accumsan lobortis lacus vitae suscipit. Pellentesque sit amet mauris a ipsum lobortis condimentum. Nam porttitor purus justo, in porta eros iaculis vitae. Ut quis luctus dolor, eget tincidunt dolor. Nam fringilla, sapien vel dignissim tempus, diam sapien viverra erat, cursus condimentum mi magna in elit. Cras fermentum, elit sit amet luctus condimentum, lacus elit pulvinar mi, ut efficitur leo neque vitae neque. Integer lacinia lectus quis nisl sodales cursus. Mauris ornare dapibus porta. Suspendisse orci augue, interdum a nisl vitae, pharetra mollis quam. Duis pretium tempus fermentum. Proin suscipit dolor nibh, porttitor lacinia neque lobortis in. Fusce lacinia erat magna, vitae tristique dui molestie sed. Morbi sit amet ultricies dolor. Quisque volutpat laoreet mi ut finibus.</p>
             </article>
 
-            <article class="page-article about-article">
+            <article class="page-article" id="about-article">
                 <p>Suspendisse sit amet lacinia odio. Aliquam ultricies magna nec lacus maximus, non gravida mi mattis. Quisque tempor non orci nec iaculis. Duis nec dolor ante. Pellentesque vestibulum ex vitae sem consectetur tincidunt. Aenean hendrerit auctor risus sed molestie. Sed velit arcu, facilisis ac congue sed, mattis eu felis. Duis in augue libero. Phasellus fringilla nisl sed auctor condimentum. Sed condimentum vestibulum metus, non eleifend sapien egestas ut. In sollicitudin risus at tincidunt lacinia.</p>
             </article>
         </div>
