Populate contact article and about article

--- a/index.html
+++ b/index.html
@@ -79,11 +79,28 @@
             </article>
 
             <article class="page-article" id="contact-article">
-                <p>Aenean accumsan lobortis lacus vitae suscipit. Pellentesque sit amet mauris a ipsum lobortis condimentum. Nam porttitor purus justo, in porta eros iaculis vitae. Ut quis luctus dolor, eget tincidunt dolor. Nam fringilla, sapien vel dignissim tempus, diam sapien viverra erat, cursus condimentum mi magna in elit. Cras fermentum, elit sit amet luctus condimentum, lacus elit pulvinar mi, ut efficitur leo neque vitae neque. Integer lacinia lectus quis nisl sodales cursus. Mauris ornare dapibus porta. Suspendisse orci augue, interdum a nisl vitae, pharetra mollis quam. Duis pretium tempus fermentum. Proin suscipit dolor nibh, porttitor lacinia neque lobortis in. Fusce lacinia erat magna, vitae tristique dui molestie sed. Morbi sit amet ultricies dolor. Quisque volutpat laoreet mi ut finibus.</p>
+                    <form action="">
+
+                        <div>
+                            <label for="name">Name:</label>
+                            <input type="text" name="name" id="name">
+                        </div>
+
+                        <div>
+                            <label for="email">Email:</label>
+                            <input type="text" name="email" id="email">
+                        </div>
+
+                        <div>
+                            <textarea name="text" id="text" cols="30" rows="10"></textarea>
+                        </div>
+
+                    </form>
             </article>
 
             <article class="page-article" id="about-article">
-                <p>Suspendisse sit amet lacinia odio. Aliquam ultricies magna nec lacus maximus, non gravida mi mattis. Quisque tempor non orci nec iaculis. Duis nec dolor ante. Pellentesque vestibulum ex vitae sem consectetur tincidunt. Aenean hendrerit auctor risus sed molestie. Sed velit arcu, facilisis ac congue sed, mattis eu felis. Duis in augue libero. Phasellus fringilla nisl sed auctor condimentum. Sed condimentum vestibulum metus, non eleifend sapien egestas ut. In sollicitudin risus at tincidunt lacinia.</p>
+                <p>Based in Tuscon, Arizona, Lucky Shrub is a medium-sized garden design firm that specializes in garden design and creation, maintenance and landscaping. The company also runs a small plant nursery that sells indoor and outdoor plants, making them a one-stop shop for clients to "transform any space into an oasis you can be proud of".</p>
+                <p>Lucky Shrub was started by a husband and wife team, Jason and Maria, who share a long-time love for plants. Jason is the garden architect. He creates and oversees all designs while managing his team of landscapers. Maria manages all the marketing for the company and oversees the nursery.</p>
             </article>
         </div>
 
