Add logo and double column grid display to footer

--- a/index.html
+++ b/index.html
@@ -107,7 +107,12 @@
     </main>
 
     <footer>
-        <p>© 2022</p>
+        <div>
+            <img src="assets/Asset 1@3x.png" alt="">
+        </div>
+        <div>
+            <p>© 2022</p>
+        </div>
     </footer>
     
 </body>
