--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
         <div id="wrapper">
             <article class="page-article" id="products-article">
                 
-                <article id="promotion">
+                <section id="promotion">
                     <img src="assets/offer.png" alt="Limited offer alert">
                     <div id="text-area">
                         <h1>Don't miss this limited time offer!</h1>
                         <p>All contracts signed this month will include all plants from the nursery for free.</p>
                     </div>
-                </article>
+                </section>
 
-                <article id="portfolio">
+                <section id="portfolio">
 
                     <div class="project">
                         <img src="assets/garden 1@3.jpg" alt="A garden designed by Lucky Shrub">
@@ -74,7 +74,7 @@
                         <p>Lucky Shrub also has park design experience to showcase.</p>
                     </div>
 
-                </article>
+                </section>
 
             </article>
 
