--- a/index.html
+++ b/index.html
@@ -61,17 +61,20 @@
 
                     <div class="project">
                         <img src="assets/garden 1@3.jpg" alt="A garden designed by Lucky Shrub">
-                        <p>Lucky Shrub will design your garden.</p>
+                        <p id="label">Lucky Shrub will design your garden.</p>
+                        <p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in mi quis metus lacinia dignissim faucibus vitae nibh. Nam pretium odio id augue ultricies, nec aliquam turpis vestibulum. Aliquam fermentum turpis nibh, nec tristique nisi fringilla nec. Donec vel nunc non magna porttitor euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at risus vitae lectus vulputate laoreet. Sed ultricies vestibulum ante vel finibus. Vivamus non mi quis leo feugiat aliquet.</p>
                     </div>
 
                     <div class="project">
                         <img src="assets/nursery 2@3.jpg" alt="The Lucky Shrub's nursery and a Lucky Shruber (worker)">
-                        <p>Your greenery is produced at our plant nursery.</p>
+                        <p id="label">Your greenery is produced at our plant nursery.</p>
+                        <p id="text">Nullam suscipit lectus eu scelerisque bibendum. Nullam sed tristique turpis. Etiam dolor eros, tempus ac consectetur eu, vulputate nec odio. Praesent laoreet quam massa. Integer mollis a nibh mattis vestibulum. Pellentesque mollis fringilla sem tincidunt lobortis. Nam eu elit at mi ultrices tristique non eget quam.</p>
                     </div>
 
                     <div class="project">
                         <img src="assets/park 1@3.jpg" alt="A park designed by Lucky">
-                        <p>Lucky Shrub also has park design experience to showcase.</p>
+                        <p id="label">Lucky Shrub also has park design experience to showcase.</p>
+                        <p id="text">In mattis tortor eget nunc iaculis, suscipit vestibulum orci ullamcorper. Aliquam dictum fringilla tellus, quis feugiat nisi euismod eget. Curabitur orci turpis, aliquet quis lobortis vel, malesuada sed velit. Vivamus faucibus in metus sit amet lobortis. Cras vitae enim vel enim pulvinar varius. Nunc ac diam nibh. Curabitur quis aliquam nisi, a feugiat arcu. Donec iaculis, massa vel faucibus lobortis, nibh magna commodo ex, in laoreet justo ex eget erat. Duis diam augue, rutrum vitae posuere vel, vehicula ac ex. Nullam quis sagittis diam. Nulla facilisi. Suspendisse efficitur sed risus in auctor.</p>
                     </div>
 
                 </section>
