--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- Font links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;700&display=swap" rel="stylesheet"> <!-- font-family: 'Dosis'; font-weight: 300/700; -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;700&family=Roboto:wght@300&display=swap" rel="stylesheet"> <!-- font-family: 'Dosis'; font-weight: 300/700; -->
 
     <!-- JS -->
     <script defer type="text/javascript" src="js/landing.js"></script>
