--- a/index.html
+++ b/index.html
@@ -87,16 +87,20 @@
 
                         <div>
                             <label for="name">Name:</label>
-                            <input type="text" name="name" id="name">
+                            <input type="text" name="name" id="name" required>
                         </div>
 
                         <div>
                             <label for="email">Email:</label>
-                            <input type="text" name="email" id="email">
+                            <input type="text" name="email" id="email" required>
                         </div>
 
                         <div>
-                            <textarea name="text" id="text" cols="30" rows="10"></textarea>
+                            <textarea name="text" id="text" cols="30" rows="10" required></textarea>
+                        </div>
+
+                        <div>
+                            <button type="submit">Send</button>
                         </div>
 
                     </form>
