--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <meta name="author" content="Lucky Shrub Garden and Landscaping">
 
     <!-- CSS links -->
-    <link rel="stylesheet" href="css/landing.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Font links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;700&family=Roboto:wght@300&display=swap" rel="stylesheet"> <!-- font-family: 'Dosis'; font-weight: 300/700; -->
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;700&family=Roboto:wght@300&display=swap" rel="stylesheet"> <!-- font-family: 'Dosis'; font-weight: 300/700; -->
 
     <!-- JS -->
-    <script defer type="text/javascript" src="js/landing.js"></script>
+    <script defer type="text/javascript" src="js/script.js"></script>
 
 </head>
 
