--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <img src="assets/Asset 1@3x.png" alt="">
         </div>
         <div>
-            <p>© 2022</p>
+            <p>© 2022 Little Shrub</p>
         </div>
     </footer>
     
