--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
     </main>
 
     <footer>
-        <div>
+        <figure>
             <img src="assets/Asset 1@3x.png" alt="">
-        </div>
+        </figure>
         <div>
             <p>© 2022 Little Shrub</p>
         </div>
