--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
         <nav id="nav-menu">
             <menu id="menu">
-                <li class="nav-item"><a id="home" href="#products-article">HOME</a></li>
-                <li class="nav-item"><a id="products" href="#products-article">PRODUCTS</a></li>
-                <li class="nav-item"><a id="contact" href="#contact-article">CONTACT</a></li>
-                <li class="nav-item"><a id="about" href="#about-article">ABOUT US</a></li>
+                <li class="nav-item"><a id="home" href="#">HOME</a></li>
+                <li class="nav-item"><a id="products" href="#">PRODUCTS</a></li>
+                <li class="nav-item"><a id="contact" href="#">CONTACT</a></li>
+                <li class="nav-item"><a id="about" href="#">ABOUT US</a></li>
             </menu>
         </nav>
 
